added readme screenshots

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.error.whitelabel.enabled=false
-spring.application.name=he.codingshadows.com
+spring.application.name=YOUR_APP_NAME_HERE
 spring.devtools.restart.poll-interval=2s
 spring.devtools.restart.quiet-period=1s
-server.port=8092
+server.port=YOUR_APP_PORT_HERE
 # Enable HTTP/2 support, if the current environment supports it
 server.http2.enabled=true
 # Enable response compression
